--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Pexels_Video</string>
+    <string name="video_title">Video Title</string>
+    <string name="duration_00_00">Duration: 00:00</string>
+    <string name="user_name">User Name</string>
+    <string name="todo">TODO</string>
 </resources>
